2016_official/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:25:41 **** Rebuild of configuration Debug for project AnishTesterv2 ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\1750800311/wpilib/cpp/current/include" "-IC:\\Users\\1750800311\\Documents\\FRC Robotics Code\\2016-Official-Chong-2\\2016-Official-Chong\\2016_official\\AnishTesterv2\\src" -O0 -g3 -Wall -c -fmessage-length=0 -std=c++14 -o "src\\Robot.o" "..\\src\\Robot.cpp" 
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\1750800311/wpilib/cpp/current/include" "-IC:\\Users\\1750800311\\Documents\\FRC Robotics Code\\2016-Official-Chong-2\\2016-Official-Chong\\2016_official\\AnishTesterv2\\src" -O0 -g3 -Wall -c -fmessage-length=0 -std=c++14 -o "src\\ImageProcess.o" "..\\src\\ImageProcess.cpp" 
arm-frc-linux-gnueabi-g++ "-LC:\\Users\\1750800311/wpilib/cpp/current/lib" -Wl,-rpath,/opt/GenICam_v2_3/bin/Linux_armv7-a,-rpath,/usr/local/frc/rpath-lib -o FRCUserProgram "src\\ImageProcess.o" "src\\Robot.o" -lwpi 
Info: Nothing to build for AnishTesterv2
19:25:55 **** Incremental Build of configuration Debug for project AnishTesterv2 ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\1750800311/wpilib/cpp/current/include" "-IC:\\Users\\1750800311\\Documents\\FRC Robotics Code\\2016-Official-Chong-2\\2016-Official-Chong\\2016_official\\AnishTesterv2\\src" -O0 -g3 -Wall -c -fmessage-length=0 -std=c++14 -o "src\\ImageProcess.o" "..\\src\\ImageProcess.cpp" 
arm-frc-linux-gnueabi-g++ "-LC:\\Users\\1750800311/wpilib/cpp/current/lib" -Wl,-rpath,/opt/GenICam_v2_3/bin/Linux_armv7-a,-rpath,/usr/local/frc/rpath-lib -o FRCUserProgram "src\\ImageProcess.o" "src\\Robot.o" -lwpi 
19:25:59 **** Incremental Build of configuration Debug for project VisionRetroProject ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\1750800311/wpilib/cpp/current/include" "-IC:\\Users\\1750800311\\Documents\\FRC Robotics Code\\2016-Official-Chong-2\\2016-Official-Chong\\2016_official\\VisionRetroProject\\src" -O0 -g3 -Wall -c -fmessage-length=0 -std=c++14 -o "src\\Robot.o" "..\\src\\Robot.cpp" 
arm-frc-linux-gnueabi-g++: error: ..\src\Robot.cpp: No such file or directory
arm-frc-linux-gnueabi-g++: fatal error: no input files
compilation terminated.
19:41:38 **** Rebuild of configuration Debug for project AutonNoVision ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\1750800311/wpilib/cpp/current/include" "-IC:\\Users\\1750800311\\Documents\\FRC Robotics Code\\2016-Official-Chong-2\\2016-Official-Chong\\2016_official\\AutonNoVision\\src" -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Robot.o" "..\\src\\Robot.cpp" 
arm-frc-linux-gnueabi-g++ "-LC:\\Users\\1750800311/wpilib/cpp/current/lib" -Wl,-rpath,/opt/GenICam_v2_3/bin/Linux_armv7-a,-rpath,/usr/local/frc/rpath-lib -o FRCUserProgram "src\\Robot.o" -lwpi 
10:38:57 **** Rebuild of configuration Debug for project AutonNoVision ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\1750800311/wpilib/cpp/current/include" "-IC:\\Users\\1750800311\\Documents\\FRC Robotics Code\\2016-Official-Chong-2\\2016-Official-Chong\\2016_official\\AutonNoVision\\src" -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Robot.o" "..\\src\\Robot.cpp" 
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\1750800311/wpilib/cpp/current/include" "-IC:\\Users\\1750800311\\Documents\\FRC Robotics Code\\2016-Official-Chong-2\\2016-Official-Chong\\2016_official\\AutonNoVision\\src" -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\TeleopControl.o" "..\\src\\TeleopControl.cpp" 
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\1750800311/wpilib/cpp/current/include" "-IC:\\Users\\1750800311\\Documents\\FRC Robotics Code\\2016-Official-Chong-2\\2016-Official-Chong\\2016_official\\AutonNoVision\\src" -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\DriveSystem.o" "..\\src\\DriveSystem.cpp" 
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\1750800311/wpilib/cpp/current/include" "-IC:\\Users\\1750800311\\Documents\\FRC Robotics Code\\2016-Official-Chong-2\\2016-Official-Chong\\2016_official\\AutonNoVision\\src" -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Auto.o" "..\\src\\Auto.cpp" 
..\src\Auto.cpp:25:6: error: 'Auton' has not been declared
 void Auton::AutonNoVision(){
      ^
10:39:24 **** Incremental Build of configuration Debug for project AutonNoVision ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\1750800311/wpilib/cpp/current/include" "-IC:\\Users\\1750800311\\Documents\\FRC Robotics Code\\2016-Official-Chong-2\\2016-Official-Chong\\2016_official\\AutonNoVision\\src" -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Auto.o" "..\\src\\Auto.cpp" 
..\src\Auto.cpp:25:6: error: 'Auton' has not been declared
 void Auton::AutonNoVision(){
      ^
10:39:36 **** Incremental Build of configuration Debug for project AutonNoVision ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\1750800311/wpilib/cpp/current/include" "-IC:\\Users\\1750800311\\Documents\\FRC Robotics Code\\2016-Official-Chong-2\\2016-Official-Chong\\2016_official\\AutonNoVision\\src" -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Auto.o" "..\\src\\Auto.cpp" 
..\src\Auto.cpp:25:6: error: 'Auton' has not been declared
 void Auton::AutonNoVision(){
      ^
10:39:50 **** Incremental Build of configuration Debug for project AutonNoVision ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\1750800311/wpilib/cpp/current/include" "-IC:\\Users\\1750800311\\Documents\\FRC Robotics Code\\2016-Official-Chong-2\\2016-Official-Chong\\2016_official\\AutonNoVision\\src" -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Auto.o" "..\\src\\Auto.cpp" 
arm-frc-linux-gnueabi-g++ "-LC:\\Users\\1750800311/wpilib/cpp/current/lib" -Wl,-rpath,/opt/GenICam_v2_3/bin/Linux_armv7-a,-rpath,/usr/local/frc/rpath-lib -o FRCUserProgram "src\\Auto.o" "src\\Defense.o" "src\\DriveSystem.o" "src\\Robot.o" "src\\Shooter.o" "src\\TeleopControl.o" -lwpi 
arm-frc-linux-gnueabi-g++: error: src\Defense.o: No such file or directory
arm-frc-linux-gnueabi-g++: error: src\Shooter.o: No such file or directory
10:41:43 **** Incremental Build of configuration Debug for project AutonNoVision ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\1750800311/wpilib/cpp/current/include" "-IC:\\Users\\1750800311\\Documents\\FRC Robotics Code\\2016-Official-Chong-2\\2016-Official-Chong\\2016_official\\AutonNoVision\\src" -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Auto.o" "..\\src\\Auto.cpp" 
arm-frc-linux-gnueabi-g++ "-LC:\\Users\\1750800311/wpilib/cpp/current/lib" -Wl,-rpath,/opt/GenICam_v2_3/bin/Linux_armv7-a,-rpath,/usr/local/frc/rpath-lib -o FRCUserProgram "src\\Auto.o" "src\\Defense.o" "src\\DriveSystem.o" "src\\Robot.o" "src\\Shooter.o" "src\\TeleopControl.o" -lwpi 
arm-frc-linux-gnueabi-g++: error: src\Defense.o: No such file or directory
arm-frc-linux-gnueabi-g++: error: src\Shooter.o: No such file or directory
